[project]
name = "research-paper-analyzer"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.29.0",
    "python-multipart==0.0.9",
    "ollama==0.2.1",
    "pypdf==4.2.0",
    "python-docx==1.1.2",
    "requests==2.31.0",
    "beautifulsoup4==4.12.3",
]
